--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@ a tool long or short lasting?</p>
 </div>
 <div id="academic-bio" class="section level3">
 <h3>Academic Bio</h3>
-<p>I am currently the full time lab manager of two labs at the <a
+<p>I am currently the full time manager of two labs at the <a
 href="https://cogsci.ucmerced.edu">University of California, Merced</a>
-where I recently graduated from with a B.A. in Psychology &amp;
-Cognitive Science. I now work in the Cognitive &amp; Information
-Sciences department under <a
+where I recently graduated with a B.A. in Psychology &amp; Cognitive
+Science. I now work in the Cognitive &amp; Information Sciences
+department under <a
 href="https://https://www.tylermarghetis.com/">Dr. Tyler Marghetis</a>
 and <a href="https://linclab0.github.io">Dr. Rachel Ryskin</a> studying
 topics ranging from creativity, embodied cognition, and language
