Fixed header mobile

--- a/index.html
+++ b/index.html
@@ -275,8 +275,10 @@ $(document).ready(function () {
 
 
 .heading {
-  margin:0 ; /* Remove margin around the image */
-  padding-left: 140px /* Remove padding within the image */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 63%;
 }
 
 
@@ -288,7 +290,7 @@ $(document).ready(function () {
   
 </style>
 <div class="heading">
-<p><img src="images/header.jpg" alt="photo" width="597" height="310"></p>
+<p><img src="images/header.jpg" alt="photo" width="597" height="303"></p>
 </div>
 <div class="bottom-stuff">
 <div id="research-interests" class="section level3">
