Fixed header mobile

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@ $(document).ready(function () {
   margin-left: auto;
   margin-right: auto;
   width: 63%;
+  height: 100%;
 }
 
 
@@ -290,7 +291,7 @@ $(document).ready(function () {
   
 </style>
 <div class="heading">
-<p><img src="images/header.jpg" alt="photo" width="597" height="303"></p>
+<p><img src="images/header.jpg" alt="photo"></p>
 </div>
 <div class="bottom-stuff">
 <div id="research-interests" class="section level3">
