fixed projects typos

--- a/CV.html
+++ b/CV.html
@@ -275,7 +275,8 @@ $(document).ready(function () {
 </style>
 <p>If my CV does not appear below, you can
 <a href="documents/AlyssaOrtegaCV.pdf" download>click here to
-download</a>.</p>
+download</a>. Only the first page will appear below for mobile
+users.</p>
 <embed
     src="documents/AlyssaOrtegaCV.pdf"
     type="application/pdf"
