--- a/CurrentProjects.html
+++ b/CurrentProjects.html
@@ -293,16 +293,16 @@ Creative Movement
 </h3>
 <p>
 A continuation of the Math Experts project, we are seeking
-non-correlation evidence of how proximity and having information
-accessible in our visual field can inspire “aha!” moments through
-self-generating insights. Participants come in person to the lab and
-solve 2 related puzzles in one of 3 conditions: close, far, or flexible.
-Those in the close condition are prevented from seeing the previous
-puzzle imagery while the far condition can easily access both and the
-flexible can chose their our method of proximity change. We predict
-those int he far and flexible conditions will solve the 2nd puzzle more
-often and faster than those in the close condition. Data collection is
-currently ongoing with a planned N = 160
+non-correlation evidence of how proximity change and having information
+accessible in our visual field can self generate hints and inspire
+“aha!” moments. Participants come in person to the lab and solve 2
+related puzzles in one of 3 conditions: close, far, or flexible. Those
+in the close condition are prevented from seeing the previous puzzle
+imagery while the far condition easily allows access to both. The
+flexible condition allows participants to chose their own method of
+proximity change. We predict those in the far and flexible conditions
+will solve the 2nd puzzle more often and faster than those in the close
+condition. Data collection is currently ongoing with a planned N = 160
 </p>
 <h3>
 NoisyP6
@@ -333,7 +333,7 @@ compendium of published research on cross-cultural variability in the
 conceptualization of space, time, and number. Specifically, it collects
 published studies involving non-English-speaking participants that
 investigate: (1) spatial frames of reference, (2) spatial
-representations of time, and (3) spatial representations of number. This
+representations of time, and (3) spatial representations of number. The
 formation of this databank is actively in progress .
 </p>
 </div>
