--- a/index.html
+++ b/index.html
@@ -309,13 +309,12 @@ a tool long or short lasting?</p>
 href="https://cogsci.ucmerced.edu">University of California, Merced</a>
 where I recently graduated with a B.A. in Psychology &amp; Cognitive
 Science. I now work in the Cognitive &amp; Information Sciences
-department under <a
-href="https://https://www.tylermarghetis.com/">Dr. Tyler Marghetis</a>
-and <a href="https://linclab0.github.io">Dr. Rachel Ryskin</a> studying
-topics ranging from creativity, embodied cognition, and language
-processing. In these labs, I utilize a variety of methods such as
-behavioral experimentation, EEG, and naturalistic observation &amp;
-analysis.</p>
+department under <a href="https://www.tylermarghetis.com/">Dr. Tyler
+Marghetis</a> and <a href="https://linclab0.github.io">Dr. Rachel
+Ryskin</a> studying topics ranging from creativity, embodied cognition,
+and language processing. In these labs, I utilize a variety of methods
+such as behavioral experimentation, EEG, and naturalistic observation
+&amp; analysis.</p>
 <p>I am also in the process of applying to Cognitive Science &amp;
 Psychology PhD programs for the Fall 2023 cycle.</p>
 </div>
