--- a/CurrentProjects.html
+++ b/CurrentProjects.html
@@ -302,7 +302,7 @@ imagery while the far condition easily allows access to both. The
 flexible condition allows participants to chose their own method of
 proximity change. We predict those in the far and flexible conditions
 will solve the 2nd puzzle more often and faster than those in the close
-condition. Data collection is currently ongoing with a planned N = 160
+condition. Data collection is currently ongoing with a planned N = 160.
 </p>
 <h3>
 NoisyP6
