updated CV & bio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>About</title>
 
-<script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -327,10 +327,11 @@ class="email">aortega59@ucmerced.edu</a>
 <h3>Research Interests</h3>
 <p>Broadly, I am interested in how gesture can be employed as a
 technique to boost learning. How is gesture used to inspire new
-insights? Can gesture help people to learn new word meaning or even
-aquire a second language? Does the helpfulness of gesture vary across
-the lifespan and/or across cultures? Are the effects of using gesture as
-a tool long or short lasting?</p>
+insights? In what ways can gesture help people to learn new word meaning
+or mathematical concepts? I am also interested in investigating the
+limitations of gesture by asking questions like (i) does the helpfulness
+of gesture vary across the lifespan and/or across culture and (ii) what
+is the duration of effect from gesture-based learning.</p>
 </div>
 <div id="academic-bio" class="section level3">
 <h3>Academic Bio</h3>
@@ -344,8 +345,9 @@ Ryskin</a> studying topics ranging from creativity, embodied cognition,
 and language processing. In these labs, I utilize a variety of methods
 such as behavioral experimentation, EEG, and naturalistic observation
 &amp; analysis.</p>
-<p>I am also in the process of applying to Cognitive Science &amp;
-Psychology PhD programs for the Fall 2023 cycle.</p>
+<p>In Fall 2024, I will begin my doctoral studies in Cognitive
+Psychology at the University of Wisconsin - Madison, studying under <a
+href="https://alibali.psych.wisc.edu/">Dr. Martha Alibali</a>.</p>
 </div>
 </div>
 
