--- a/CV.html
+++ b/CV.html
@@ -13,7 +13,7 @@
 
 <title>CV</title>
 
-<script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -274,9 +274,8 @@ $(document).ready(function () {
 }
 </style>
 <p>If my CV does not appear below, you can
-<a href="documents/AlyssaOrtegaCV.pdf" download>click here to
-download</a>. Only the first page will appear below for mobile
-users.</p>
+<a href="documents/AlyssaOrtegaCV.pdf">click here to download</a>. Only
+the first page will appear below for mobile users.</p>
 <embed
     src="documents/AlyssaOrtegaCV.pdf"
     type="application/pdf"
