updated CV & ATLAS website

--- a/CurrentProjects.html
+++ b/CurrentProjects.html
@@ -269,12 +269,26 @@ $(document).ready(function () {
 
 
 <style type="text/css">
-  .title {display:none;}
+  .title {
+  display:none;
+  }
   
   .projects {padding-left: 10px;padding=top: 10px}
   
 </style>
-<div class="projects">
+<projects>
+<h3>
+<a href="https://atlas-databank.github.io">ATLAS</a>
+</h3>
+<p>
+The Abstract Thought and Language Across Space (ATLAS) databank is a
+compendium of published research on cross-cultural variability in the
+conceptualization of space, time, and number. Specifically, it collects
+published studies involving non-English-speaking participants that
+investigate: (1) spatial frames of reference, (2) spatial
+representations of time, and (3) spatial representations of number. The
+formation of this databank is actively in progress .
+</p>
 <h3>
 Math Experts
 </h3>
@@ -324,19 +338,7 @@ proportions in non-target sentences between-subjects, and manipulating
 error type (semantic, syntactic, recoverable) within-subjects. Data
 collection is currently ongoing with a planned N = 48.
 </p>
-<h3>
-ATLAS
-</h3>
-<p>
-The Abstract Thought and Language Across Space (ATLAS) databank is a
-compendium of published research on cross-cultural variability in the
-conceptualization of space, time, and number. Specifically, it collects
-published studies involving non-English-speaking participants that
-investigate: (1) spatial frames of reference, (2) spatial
-representations of time, and (3) spatial representations of number. The
-formation of this databank is actively in progress .
-</p>
-</div>
+<p></projects></p>
 
 
 
