--- a/index.html
+++ b/index.html
@@ -270,45 +270,38 @@ $(document).ready(function () {
 
 <style type="text/css">
   .title {
-    display: none;
-  }
+    display: none;}
 
   .heading {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 42%;
-    height: 67%;
-  }
+    height: 67%;}
 
   .bottom-stuff {
     padding-top: 20px;
     padding-right: 25px;
-    padding-left: 25px;
-  }
+    padding-left: 25px;}
 
   figure {
     display: flex;
-    justify-content: center; /* Center the content horizontally */
-  }
+    justify-content: center; /* Center the content horizontally */}
 
   .image-left {
     text-align: center; /* Center the content within the figure */
     max-width: 400px; /* Set a maximum width for better control */
-    margin: 0 auto; /* Center the entire block horizontally */
-  }
+    margin: 0 auto; /* Center the entire block horizontally */}
 
   .image-left img {
-    border-radius: 10px; /* Adjust the value to change the amount of rounding */
-  }
+    border-radius: 10px; /* Adjust the value to change the amount of rounding */}
 
   .image-left figcaption {
     width: 100%;
     padding-left: 40px;
     padding-right: 40px;
     text-align: center;
-    line-width: 5px;
-  }
+    line-width: 5px;}
     
 </style>
 <figure class="image-left" style="padding-top: 10px;">
